--- a/SP2023-Assignment1-sriddle/wwwroot/index.html
+++ b/SP2023-Assignment1-sriddle/wwwroot/index.html
@@ -10,7 +10,7 @@
         <h1 id="Title">The Chronicles of Narnia: Prince Caspian</h1>
         <img id="CoverArt" src="narnia.png"/>
         <h5 id="Rating">6.5/10</h5>
-        <iframe width="1280" height="720" src="https://www.youtube.com/embed/zZfDS5eu7fA" title="The Chronicles of Narnia: Prince Caspian (2008) Trailer #1 | Movieclips Classic Trailers" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe id="Trailer" width="1280" height="720" src="https://www.youtube.com/embed/zZfDS5eu7fA" title="The Chronicles of Narnia: Prince Caspian (2008) Trailer #1 | Movieclips Classic Trailers" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <br />
         <a href="https://www.imdb.com/title/tt0499448/">Click here to be taken to the IMDB page for this movie</a>
         <p id="Summary">The Pevensie siblings return to Narnia, where they are enlisted to once again help ward off an evil king and restore the rightful heir to the land's throne, Prince Caspian.</p>
